# FFrusT

./: .gitignore  Cargo.toml  README.md  bench.sh
.github/workflows/: ci.yml
benches/: fft_benchmark.rs
src/: freq_scale.rs  intrinfft.rs  lib.rs  main.rs  pfft.rs  rfft.rs  sfft.rs  splitfft.rs  utils.rs
src/intrinsic/: intrinfft.rs  mod.rs
tests/: accuracy.rs
